--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ clap = { version = "4.4", features = ["derive"] }
 crossterm = "0.29.0"
 ratatui = "0.29.0"
 base64 = "0.22"
-wgpu = "25.0"
 tokio = { version = "1.0", features = ["full"] }
-bytemuck = { version = "1.14", features = ["derive"] }
+axum = "0.7"
+tower-http = { version = "0.5", features = ["cors"] }
 
 [lib]
 name = "arx_engine"
@@ -21,3 +21,7 @@ path = "src/lib.rs"
 [[bin]]
 name = "arx"
 path = "src/main.rs"
+
+[[bin]]
+name = "server"
+path = "src/server.rs"
