Rename nginx service to frontend and server to backend in compose.yaml for clarity

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,14 +1,14 @@
 services:
-  nginx:
+  frontend:
     image: joseluisq/static-web-server:2
     ports:
       - "8080:80"
     volumes:
       - ./public:/public:ro
     depends_on:
-      - server
+      - backend
 
-  server:
+  backend:
     build:
       context: .
       dockerfile: Dockerfile
